--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs selectedIndex="1">
-  <ion-tab [root]="tab1Root" tabTitle="talk" tabIcon="text"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="timeline" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="me" tabIcon="contact"></ion-tab>
+  <ion-tab [root]="tab1Root" [rootParams]="data" tabTitle="talk" tabIcon="text"></ion-tab>
+  <ion-tab [root]="tab2Root" [rootParams]="data" tabTitle="timeline" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab3Root" [rootParams]="data" tabTitle="me" tabIcon="contact"></ion-tab>
 </ion-tabs>
