--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -9,9 +9,9 @@
       <p padding>身内だけのアプリ</p>
     </ion-slide>
     <ion-slide>
-      
+
       <ion-list padding no-line>
-        <ion-list-header>Login</ion-list-header>
+        <ion-list-header style="margin-bottom:10px;">Login</ion-list-header>
         <ion-item>
           <ion-input type="email" placeholder="Email" [(ngModel)]="credentials.email"></ion-input>
         </ion-item>
